syntax = "proto3";
package proto;

option java_generic_services = true;
option java_multiple_files = true;
option java_package = "barbershop.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

message GrpcBarbershopServiceId {
  int32 id = 1;
}

message GrpcAppointmentId {
  string id = 1;
}

message GrpcDate {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}

message GrpcTime {
  string hour = 1;
  string minutes = 2;
}

message GrpcAppointmentRequest {
  GrpcDate date = 1;
  GrpcTime time = 2;
  GrpcBarbershopServiceId barbershop_service_id = 3;
}

message GrpcAppointmentResponse {
  GrpcAppointmentId appointment_id = 1;
  int32 price = 2;
  string is_successful = 3;
}

message GrpcBarbershopService {
  GrpcBarbershopServiceId id = 1;
  string name = 2;
  int32 minutes_duration = 3;
  int32 ruble_price = 4;
}

message GrpcStatus {
  string is_successful = 1;
}

message GrpcFreeTime {
  GrpcTime start_free_time = 1;
  int32 minutes_duration = 2;
}

service ClientBarbershopService {
  rpc getBarbershopServices(google.protobuf.Empty) returns (stream GrpcBarbershopService) {}
  rpc getFreeTime (GrpcDate) returns (stream GrpcFreeTime) {}
  rpc appointmentToBarbershop (GrpcAppointmentRequest) returns (GrpcAppointmentResponse) {}
  rpc removeAppointmentById (GrpcAppointmentId) returns (GrpcStatus) {}
}

service EmployeeBarbershopService {
  rpc addBarbershopService(GrpcBarbershopService) returns (GrpcBarbershopServiceId) {}
  rpc removeBarbershopService(GrpcBarbershopServiceId) returns (GrpcStatus) {}
  rpc getBarbershopServices(google.protobuf.Empty) returns (stream GrpcBarbershopService) {}
}
